XXX store: regenerate client
